diesel_compile_tests/tests/fail/distinct_on_clause_only_supported_for_pg.stderr
error[E0271]: type mismatch resolving `<diesel::SqliteConnection as diesel::Connection>::Backend == Pg`
  --> $DIR/distinct_on_clause_only_supported_for_pg.rs:16:29
   |
16 |     users.distinct_on(name).get_results(&mut sqlite_connection);
   |                             ^^^^^^^^^^^ expected struct `Sqlite`, found struct `Pg`
   |
   = note: required because of the requirements on the impl of `LoadQuery<diesel::SqliteConnection, _>` for `SelectStatement<users::table, diesel::query_builder::select_clause::DefaultSelectClause, DistinctOnClause<columns::name>>`

error[E0271]: type mismatch resolving `<diesel::MysqlConnection as diesel::Connection>::Backend == Pg`
  --> $DIR/distinct_on_clause_only_supported_for_pg.rs:20:29
   |
20 |     users.distinct_on(name).get_results(&mut mysql_connection);
   |                             ^^^^^^^^^^^ expected struct `Mysql`, found struct `Pg`
   |
   = note: required because of the requirements on the impl of `LoadQuery<diesel::MysqlConnection, _>` for `SelectStatement<users::table, diesel::query_builder::select_clause::DefaultSelectClause, DistinctOnClause<columns::name>>`
